Fix spacing highlight CSS class in HTML

--- a/theme/static/sass/_highlight.scss
+++ b/theme/static/sass/_highlight.scss
@@ -1,5 +1,4 @@
 .highlight {
-  padding: 0 0 0 10px;
   pre {
     color: #f8f8f2;
     background: #272822;
